Fix java8 incompatibility